# django-multitenant-boilerplate

./: .gitignore  pyproject.toml  tenant_manage.py
demande/: admin.py  models.py  urls.py  views.py
demande/migrations/: 0001_initial.py
local/: create_tenant.py
multitenant/: settings.py  urls.py
owner/: admin.py  models.py  urls.py  utils.py
owner/management/commands/: add_tenants.py
owner/migrations/: 0001_initial.py
tenant/: admin.py  models.py
users/: models.py
