[tool.poetry]
name = "multitenant"
version = "0.1.0"
description = ""
authors = ["vaz <vasanth93067@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
psycopg2 = "^2.9.3"
django-extensions = "^3.1.5"
djangorestframework = "^3.13.1"
Markdown = "^3.3.6"
django-tenants = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
